# ivoox_podcast_mp3

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js  modelos.ts
frontend/src/lib/: BotonDescargas.svelte  FormIvooxUrl.svelte  GestionDescargas.svelte  VistaAnalisis.svelte
src/: main.rs
src/app/: descargar.rs  ivoox_url.rs  mod.rs  router.rs
src/cliente_http/: crear.rs  mod.rs
src/podcast/: analizar.rs  capitulos.rs  mod.rs  modelos.rs
