[package]
name = "ivoox_podcast_mp3"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-embed = "0.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.9",  default-features = false, features = ["cookies", "stream", "rustls-tls"]}
rust-embed = "8.5.0"
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
